--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Login.cshtml
@@ -29,6 +29,11 @@
     </style>
 }
 
+<div style="background-color: white; width: 100%">
+    <img style="margin-top: 15px; margin-left: 15px" src="~/Images/logo1.png" />
+    <h5 style="margin: 15px; float: right; color: rgb(218, 221, 221)">Direct Agents Client Portal</h5>
+</div>
+
 <div class="logindiv">
     <div style="background-color: rgb(243,243,243); padding-top: 10px">
     </div>
@@ -59,9 +64,9 @@
         <div style="background-color: rgb(243,243,243); padding: 10px">
             <input type="submit" class="button" value="LOG IN" style="width: 200px" />
         </div>
-        <div style="position: relative; left: 0px; top: 0px;">
+@*<div style="position: relative; left: 0px; top: 0px;">
             <img class="dalogo2" src="~/Images/da.jpeg" />
-        </div>
+        </div>*@
     }
 </div>
 
