--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
@@ -66,6 +66,7 @@
                 <th style="width: 50%"></th>
                 <th>Clicks</th>
                 <th>Leads</th>
+                <th>Rate</th>
                 <th>Spend</th>
             </tr>
             @foreach (var rangesum in Model.DateRangeSummaries)
@@ -74,6 +75,7 @@
                     <td>@rangesum.Name</td>
                     <td>@String.Format("{0:n0}", rangesum.Clicks)</td>
                     <td>@String.Format("{0:n0}", rangesum.Conversions)</td>
+                    <td>@rangesum.ConversionRate</td>
                     <td>@rangesum.RevenueFormatted</td>
                 </tr>
             }
